--- a/templates/discotheque/artiste/artistes_by_categories.html.twig
+++ b/templates/discotheque/artiste/artistes_by_categories.html.twig
@@ -9,7 +9,7 @@
     </div>
     <div class="d-flex flex-wrap justify-content-around">
         {% for artiste in artistes %}
-            <a class="card border-primary m-2 text-decoration-none" style="width: 20rem;" href="{{ path('app_artiste_show', {'id': artiste.id}) }}">
+            <div class="card border-primary m-2 text-decoration-none" style="width: 20rem;">
                 <h5 class="card-header">{{ artiste.getFullName | title }}</h5>
                 <div class="card-body">
                     <p class="card-text">
@@ -22,8 +22,11 @@
                 </div>
                 <div class="card-footer">
                     Date de naissance : {{ artiste.dateNaissance | date('d/m/Y') }} <br>
+                    <div class="d-flex justify-content-between mt-2">
+                        <a href="{{ path('app_artiste_show', {'id': artiste.id}) }}" class="btn btn-primary">Afficher</a>
+                    </div>
                 </div>
-            </a>
+            </div>
         {% endfor %}
     </div>
 
